--- a/Objects/Lab8.build_log.htm
+++ b/Objects/Lab8.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.24.2.0
 Copyright (C) 2017 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Rick Tolleson, Rochester Institute of Technology, LIC=----
+License Information: Richard Tolleson, RIT, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.24.1
-Toolchain Path:  C:\Keil_v515\ARM\ARMCC\Bin
+Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 5 (build 528)
 Assembler:       Armasm.exe V5.06 update 5 (build 528)
 Linker/Locator:  ArmLink.exe V5.06 update 5 (build 528)
@@ -21,18 +21,18 @@ Target DLL:      CMSIS_AGDI.dll V1.28.3.0
 Dialog DLL:      TARMCM1.DLL V1.13.0.0
  
 <h2>Project:</h2>
-C:\Users\ZDM9127\Desktop\Lab8\Lab8.uvprojx
-Project File Date:  10/25/2017
+C:\Users\zdm9127\Desktop\96-bit-addition\Lab8.uvprojx
+Project File Date:  10/31/2017
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v515\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
-assembling HardFault_LCD.s...
 assembling Start.s...
+assembling HardFault_LCD.s...
 assembling Lab8.s...
-Lab8.s(228): warning: A1488W: PROC/FUNC at line 165 in 'Lab8.s' without matching ENDP/ENDFUNC
+Lab8.s(233): warning: A1488W: PROC/FUNC at line 165 in 'Lab8.s' without matching ENDP/ENDFUNC
 linking...
-Program Size: Code=1612 RO-data=408 RW-data=444 ZI-data=0  
+Program Size: Code=1668 RO-data=416 RW-data=444 ZI-data=0  
 ".\Objects\Lab8.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -44,7 +44,7 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_Target_1
-  C:\Keil_v515\ARM\PACK\Keil\Kinetis_KLxx_DFP\1.6.0\Device\Include
+  C:\Keil_v5\ARM\PACK\Keil\Kinetis_KLxx_DFP\1.6.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 Build Time Elapsed:  00:00:00
